--- a/src/main/resources/templates/art.html
+++ b/src/main/resources/templates/art.html
@@ -19,5 +19,12 @@
     </nav>
 </div>
 <h1>This will be art page</h1>
+<div class="grid-container">
+    <div class="Greeting"></div>
+    <div class="Pic-1"></div>
+    <div class="pic-2"></div>
+    <div class="pic-3"></div>
+    <div class="pic-4"></div>
+</div>
 </body>
 </html>
