trying to get stylesheet to link

--- a/src/main/resources/templates/art.html
+++ b/src/main/resources/templates/art.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thyme leaf.org/extras/spring-security" lang="en">
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,6 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" type='text/css' th:href="@{/art.css}">
+    <link rel="stylesheet" href="/static/art.css">
 
 </head>
 <body>
@@ -21,7 +21,7 @@
         </ul>
     </nav>
 </div>
-<h1>This will be art page</h1>
+<h1 class="heading">This will be art page</h1>
 <div class="grid-container">
     <div class="Greeting"></div>
     <div class="Pic-1"></div>
