--- a/src/main/resources/templates/art.html
+++ b/src/main/resources/templates/art.html
@@ -24,10 +24,10 @@
 <h1 class="heading">This will be art page</h1>
 <div class="grid-container">
     <div class="Greeting"></div>
-    <div class="Pic-1"></div>
-    <div class="pic-2"></div>
-    <div class="pic-3"></div>
-    <div class="pic-4"></div>
+    <div class="pic-1">1</div>
+    <div class="pic-2">2</div>
+    <div class="pic-3">3</div>
+    <div class="pic-4">4</div>
 </div>
 </body>
 </html>
