finally got all grids to show up

--- a/src/main/resources/templates/art.html
+++ b/src/main/resources/templates/art.html
@@ -24,7 +24,7 @@
 <h1 class="heading">This will be art page</h1>
 <div class="grid-container">
     <div class="Greeting"></div>
-    <div class="pic-1">1</div>
+    <div class="first-grid">this is first grid</div>
     <div class="pic-2">2</div>
     <div class="pic-3">3</div>
     <div class="pic-4">4</div>
