--- a/src/main/resources/static/art.css
+++ b/src/main/resources/static/art.css
@@ -12,8 +12,8 @@
 
 .Greeting { grid-area: Greeting; }
 
-.Pic-1 { grid-area: pic-1;
-    background-color: yellow;
+.first-grid {
+    background-color: yellow
 }
 
 .pic-2 { grid-area: pic-2;
