--- a/src/main/resources/templates/home-two.html
+++ b/src/main/resources/templates/home-two.html
@@ -31,6 +31,39 @@
         <img th:src="@{/images/LoadingCat.gif}" alt="loading-cat">
     </div>
 </div>
+<a name="top"></a>
+<!--mobile navbar-->
+<div class="d-block d-sm-block d-md-block d-lg-none">
+    <header>
+        <nav class="mobile-navbar navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="/" ><img th:src="@{/images/Gacho-Icon-Black.png}" title="Gacho icon black" width="50px" height="50px"/></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/art">Art</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/magazine">Magazine</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/music">Music</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/shop">Shop</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+</div>
+<!--desktop navbar-->
 <div class="d-none d-lg-block d-xl-block">
     <nav class="top-nav navbar-light bg-color">
         <ul id="links">
@@ -42,6 +75,9 @@
             <li><a href="shop"><img th:src="@{/Links/shop.png}" title="shop icon" width="90" height="36"/></a></li>
         </ul>
     </nav>
+</div>
+<div class="smiley">
+    <img th:src="@{/images/smiley.gif}" alt="smiley-gif">
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
