--- a/src/main/resources/templates/home-two.html
+++ b/src/main/resources/templates/home-two.html
@@ -36,7 +36,8 @@
 <div class="d-block d-sm-block d-md-block d-lg-none">
     <header>
         <nav class="mobile-navbar navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="/" ><img th:src="@{/images/Gacho-Icon-Black.png}" title="Gacho icon black" width="50px" height="50px"/></a>
+            <a class="navbar-brand" href="/"><img th:src="@{/images/Gacho-Icon-Black.png}" title="Gacho icon black"
+                                                  width="50px" height="50px"/></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -67,24 +68,44 @@
 <div class="d-none d-lg-block d-xl-block">
     <nav class="top-nav navbar-light bg-color">
         <ul id="links">
-            <li><a class="navbar-brand logo" href="/"><img th:src="@{/images/Gacho-Icon-Black.png}" title="Gacho icon black" width="100px" height="100px"/></a></li>
+            <li><a class="navbar-brand logo" href="/"><img th:src="@{/images/Gacho-Icon-Black.png}"
+                                                           title="Gacho icon black" width="100px" height="100px"/></a>
+            </li>
             <li><a href="art"><img th:src="@{/Links/art-icon.png}" title="Art Icon" width="90" height="36"/></a>
             </li>
-            <li><a href="magazine"><img th:src="@{/Links/Zine.png}" title="Zine icon" width="90px" height="36px"/></a></li>
-            <li><a href="music"><img th:src="@{/Links/music.png}" title="Muisc icon" width="90px" height="36px"/></a></li>
+            <li><a href="magazine"><img th:src="@{/Links/Zine.png}" title="Zine icon" width="90px" height="36px"/></a>
+            </li>
+            <li><a href="music"><img th:src="@{/Links/music.png}" title="Muisc icon" width="90px" height="36px"/></a>
+            </li>
             <li><a href="shop"><img th:src="@{/Links/shop.png}" title="shop icon" width="90" height="36"/></a></li>
         </ul>
     </nav>
 </div>
 <div class="video-text">
-    <h1>Gacho Style</h1>
+    <img th:src="@{/images/gacho-overlay.png}" width="75%" height="75%"/>
 </div>
-<div class="video d-flex justify-content-center">
-    <video controls autoplay loop class="zerkVideo">
-        <source th:src="@{../../videos/ZERKTRONIC-DONTWORRY.mp4}" src="/static/videos/ZERKTRONIC-DONTWORRY.mp4"
-                type="video/mp4">
-    </video>
+
+<!--LARGE VIDEO DISPLAY-->
+
+<div class="d-none d-lg-block d-xl-block">
+    <div class="video-lg d-flex justify-content-center">
+        <video controls autoplay loop class="zerkVideo-lg">
+            <source th:src="@{../../videos/ZERKTRONIC-DONTWORRY.mp4}" src="/static/videos/ZERKTRONIC-DONTWORRY.mp4"
+                    type="video/mp4">
+        </video>
+    </div>
 </div>
+<!--SMALL VIDEO DISPLAY-->
+
+<div class="d-block d-sm-block d-md-block d-lg-none">
+    <div class="video-sm d-flex justify-content-center">
+        <video controls autoplay loop class="zerkVideo-sm">
+            <source th:src="@{../../videos/ZERKTRONIC-DONTWORRY.mp4}" src="/static/videos/ZERKTRONIC-DONTWORRY.mp4"
+                    type="video/mp4">
+        </video>
+    </div>
+</div>
+
 <div class="smiley">
     <img class="center-block" th:src="@{/images/smiley.gif}" alt="smiley-gif" height="25%" width="25%">
 </div>
