added new text overlay

--- a/src/main/resources/templates/home-two.html
+++ b/src/main/resources/templates/home-two.html
@@ -81,8 +81,8 @@
         </ul>
     </nav>
 </div>
-<div class="video-text">
-    <img th:src="@{/images/gacho-overlay.png}" width="75%" height="75%"/>
+<div class="video-overlay">
+    <img th:src="@{/images/Gacho-header.png}" width="75%" height="75%"/>
 </div>
 
 <!--LARGE VIDEO DISPLAY-->
