--- a/src/main/resources/static/home-two.css
+++ b/src/main/resources/static/home-two.css
@@ -18,12 +18,11 @@ body, html {
 }
 
 
-.video-text {
+.video-overlay {
     position: absolute;
-    margin-top: -10%;
+    margin-top: 3%;
     z-index:1;
-    display: flex;
-    justify-content: center;
+    left: 25%;
 }
 
 
