--- a/src/main/resources/templates/home-two.html
+++ b/src/main/resources/templates/home-two.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Home page two</title>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" type='text/css' th:href="@{/home-two.css}">
@@ -105,7 +106,27 @@
         </video>
     </div>
 </div>
+<section class="about-section">
+    <div class="d-none d-lg-block d-xl-block">
+        <div class="about-large">
+            <h1>
+                Gacho style is an underground magazine, and collective.
+                <br>
+                We create weird shit.
+            </h1>
+        </div>
+    </div>
 
+    <div class="d-block d-sm-block d-md-block d-lg-none">
+        <div>
+            <h1 class="about-small">
+                Gacho style is an underground magazine, and collective.
+                <br>
+                We create weird shit.
+            </h1>
+        </div>
+    </div>
+</section>
 <div class="smiley">
     <img class="center-block" th:src="@{/images/smiley.gif}" alt="smiley-gif" height="25%" width="25%">
 </div>
