added a to top of page button

--- a/src/main/resources/templates/home-two.html
+++ b/src/main/resources/templates/home-two.html
@@ -130,6 +130,9 @@
 <div class="smiley">
     <img class="center-block" th:src="@{/images/smiley.gif}" alt="smiley-gif" height="25%" width="25%">
 </div>
+<div class="pimg5">
+    <a href="#top">top of page</a>
+</div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
