--- a/src/main/resources/static/home-two.css
+++ b/src/main/resources/static/home-two.css
@@ -45,6 +45,7 @@ body, html {
     font-size: 50px;
     font-family: 'Work Sans', sans-serif;
     margin-left: 10%;
+    margin-right: 10%;
     margin-bottom: 10%;
 }
 
@@ -60,5 +61,20 @@ body, html {
     margin-top: 18%;
     width: 100%;
     height: auto;
+}
+
+.pimg5 {
+    position: absolute;
+    width:100%;
+    text-align: center;
+    font-size: 27px;
+    letter-spacing: 8px;
+    text-transform: uppercase;
+    margin-top: 5%;
+    margin-bottom: 2%;
+}
+
+.pimg5 a {
+    color: white;
 }
 
