deleting un-needed navbar css

--- a/src/main/resources/templates/home-two.html
+++ b/src/main/resources/templates/home-two.html
@@ -85,7 +85,7 @@
         <div id="navigation-container">
             <a class="navbar-brand logo" href="/"><img th:src="@{/images/Gacho-icon-White.png}" title="Gacho icon black"
                                                        width="100px" height="100px"/></a>
-            <nav>
+            <nav class="desktop-nav-links">
                 <ul>
                     <li><a href="art">Art</a></li>
                     <li><a href="magazine">Magazine</a></li>
