--- a/src/main/resources/static/navbar.css
+++ b/src/main/resources/static/navbar.css
@@ -4,59 +4,19 @@
     margin-bottom:0;
 }
 
-nav ul {
-    margin: 0;
-    padding: 0;
-    display: flex;
-}
 nav ul li {
     display: inline-block;
     list-style-type: none;
 }
+
 nav ul li a {
-    color: black;
+    color: white;
     /*background-color: #ffffff;*/
     display: block;
     line-height: 3em;
     padding: 1em 1em;
     text-decoration: none;
 
-}
-nav ul li:first-child {
-    margin-right: auto;
-}
-
-.navbar-items li{
-    display: flex;
-    justify-content: end;
-}
-
-ul.nav img:hover { color: #ED6EE4 !important; }
-
-.bg-color{
-    background-color: white;
-}
-
-nav li {
-
-    color: red;
-
-    position: relative;
-}
-
-nav li::after {
-    background-color: red;
-    content: "";
-    width: 0;
-    height: 3px;
-    left: 0;
-    bottom: 0;
-    transition: width 0.35s ease 0s;
-    position: absolute;
-}
-
-nav li:hover::after {
-    width: 100%;
 }
 
 nav ul {
@@ -65,4 +25,6 @@ nav ul {
     margin: 0;
 }
 
-nav{float:right;}
+.desktop-nav-links {float:right;}
+
+a:hover {color: red;}
