--- a/src/main/resources/static/navbar.css
+++ b/src/main/resources/static/navbar.css
@@ -1,13 +1,13 @@
-.top-nav .navbar-items{
-    background-color: #282e34;
-    color:#ddd;
-    margin-bottom:0;
-}
+/*.top-nav .navbar-items{*/
+/*    background-color: #282e34;*/
+/*    color:#ddd;*/
+/*    margin-bottom:0;*/
+/*}*/
 
 nav ul li {
     display: inline-block;
     list-style-type: none;
-    font-size: 25px;
+    font-size: 35px;
 }
 
 nav ul li a {
@@ -16,7 +16,7 @@ nav ul li a {
     display: block;
     padding: 1em 1em;
     text-decoration: none;
-    font-family: 'Ceviche One', cursive;
+    font-family: 'Sedgwick Ave Display', cursive;
 }
 
 nav ul {
@@ -25,6 +25,11 @@ nav ul {
     margin: 0;
 }
 
+.navbar-dark .navbar-nav .nav-link {
+    color: white;
+}
+
 .desktop-nav-links {float:right;}
 
-a:hover {color: red;}
+a:hover {color: #666666;
+}
