--- a/src/main/resources/templates/home-two.html
+++ b/src/main/resources/templates/home-two.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Ceviche+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
     <link rel="stylesheet" type='text/css' th:href="@{/home-two.css}">
     <link rel="stylesheet" type='text/css' th:href="@{/navbar.css}">
     <link rel="stylesheet" type='text/css' th:href="@{/catLoader.css}">
@@ -37,8 +37,8 @@
 <!--mobile navbar-->
 <div class="d-block d-sm-block d-md-block d-lg-none">
     <header>
-        <nav class="mobile-navbar navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="/"><img th:src="@{/images/Gacho-Icon-Black.png}" title="Gacho icon black"
+        <nav class="mobile-navbar navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="/"><img th:src="@{/images/Gacho-Icon-White.png}" title="Gacho icon white"
                                                   width="50px" height="50px"/></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,7 +46,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
@@ -82,7 +82,7 @@
     <!--            <li><a href="shop"><img th:src="@{/Links/shop.png}" title="shop icon" width="90" height="36"/></a></li>-->
     <!--        </ul>-->
     <!--    </nav>-->
-    <div class="navigation-bar">
+    <div class="navigation-bar navbar-dark bg-dark">
         <div id="navigation-container">
             <a class="navbar-brand logo" href="/"><img th:src="@{/images/Gacho-icon-White.png}" title="Gacho icon black"
                                                        width="100px" height="100px"/></a>
@@ -91,7 +91,7 @@
                     <li><a href="art">Art</a></li>
                     <li><a href="magazine">Magazine</a></li>
                     <li><a href="music">Music</a></li>
-                    <li><a href="shop">Shop</a></li>
+                    <li><a href="shop">$hop</a></li>
                 </ul>
             </nav>
         </div>
