--- a/src/main/resources/templates/home-two.html
+++ b/src/main/resources/templates/home-two.html
@@ -105,7 +105,7 @@
 
 <div class="d-none d-lg-block d-xl-block">
     <div class="video-lg d-flex justify-content-center">
-        <video controls autoplay loop class="zerkVideo-lg">
+        <video controls  loop class="zerkVideo-lg">
             <source th:src="@{../../videos/ZERKTRONIC-DONTWORRY.mp4}" src="/static/videos/ZERKTRONIC-DONTWORRY.mp4"
                     type="video/mp4">
         </video>
@@ -115,7 +115,7 @@
 
 <div class="d-block d-sm-block d-md-block d-lg-none">
     <div class="video-sm d-flex justify-content-center">
-        <video controls autoplay loop class="zerkVideo-sm">
+        <video controls loop class="zerkVideo-sm">
             <source th:src="@{../../videos/ZERKTRONIC-DONTWORRY.mp4}" src="/static/videos/ZERKTRONIC-DONTWORRY.mp4"
                     type="video/mp4">
         </video>
