--- a/src/main/resources/templates/art.html
+++ b/src/main/resources/templates/art.html
@@ -6,20 +6,57 @@
     <title>art</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type='text/css' th:href="@{/navbar.css}">
     <link rel="stylesheet" type='text/css' th:href="@{/art.css}">
     <link rel="stylesheet" href="/static/art.css">
 
 </head>
 <body>
-<div>
-    <nav class="top-nav">
-        <ul id="links" class="navbar-items  d-flex justify-content-end" >
-            <li class="m-2 d-inline-flex nav-item"><a href="shop">SHOP</a></li>
-            <li class="m-2 d-inline-flex nav-item"><a href="music">MUSIC</a></li>
-            <li class="m-2 d-inline-flex nav-item"><a href="magazine">MAGAZINE</a></li>
-            <li class="m-2 d-inline-flex nav-item"><a href="/">HOME</a></li>
-        </ul>
-    </nav>
+<!--mobile navbar -->
+<div class="d-block d-sm-block d-md-block d-lg-none">
+    <header>
+        <nav class="mobile-navbar navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="/"><img th:src="@{/images/Gacho-Icon-Black.png}" title="Gacho icon black"
+                                                  width="50px" height="50px"/></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/art">Shop</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/music">Music</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/shop">Magazine</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+</div>
+<!--desktop navbar-->
+<div class="d-none d-lg-block d-xl-block">
+    <div class="navigation-bar navbar-dark bg-dark">
+        <div id="navigation-container">
+            <a class="navbar-brand logo" href="/"><img th:src="@{/images/Gacho-icon-White.png}" title="Gacho icon black"
+                                                       width="100px" height="100px"/></a>
+            <nav class="desktop-nav-links">
+                <ul>
+                    <li><a href="shop">$hop</a></li>
+                    <li><a href="music">Music</a></li>
+                    <li><a href="magazine">Magazine</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
 </div>
 <h1 class="heading">This will be art page</h1>
 <div class="grid-container">
@@ -29,5 +66,15 @@
     <div class="pic-3">3</div>
     <div class="pic-4">4</div>
 </div>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
+
 </body>
 </html>
