--- a/src/main/resources/templates/magazine.html
+++ b/src/main/resources/templates/magazine.html
@@ -7,6 +7,7 @@
     <title>Magazine</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
     <link rel="stylesheet" type='text/css' th:href="@{/magazine.css}">
     <link rel="stylesheet" type='text/css' th:href="@{/navbar.css}">
     <link rel="stylesheet" type='text/css' th:href="@{/catLoader.css}">
@@ -22,7 +23,7 @@
     </script>
     <script src="https://kit.fontawesome.com/4e791167da.js" crossorigin="anonymous"></script>
     <script>
-        window.addEventListener("load", function(){
+        window.addEventListener("load", function () {
             const loader = document.querySelector(".loader");
             loader.className += " hidden";
         })
@@ -43,7 +44,8 @@
 <div class="d-block d-sm-block d-md-block d-lg-none">
     <header>
         <nav class="mobile-navbar navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="/" ><img th:src="@{/images/Gacho-Icon-Black.png}" title="Gacho icon black" width="50px" height="50px"/></a>
+            <a class="navbar-brand" href="/"><img th:src="@{/images/Gacho-Icon-Black.png}" title="Gacho icon black"
+                                                  width="50px" height="50px"/></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -69,18 +71,23 @@
 </div>
 <!--desktop navbar-->
 <div class="d-none d-lg-block d-xl-block">
-    <nav class="top-nav navbar-light bg-color">
-        <ul id="links">
-            <li><a class="navbar-brand logo" href="/"><img th:src="@{/images/Gacho-Icon-Black.png}" title="Gacho icon black" width="100px" height="100px"/></a></li>
-            <li><a href="art"><img th:src="@{/Links/art-icon.png}" title="Art Icon" width="90" height="36"/></a>
-            </li>
-            <li><a href="music"><img th:src="@{/Links/music.png}" title="Muisc icon" width="90px" height="36px"/></a></li>
-            <li><a href="shop"><img th:src="@{/Links/shop.png}" title="shop icon" width="90" height="36"/></a></li>
-        </ul>
-    </nav>
+    <div class="navigation-bar navbar-dark bg-dark">
+        <div id="navigation-container">
+            <a class="navbar-brand logo" href="/"><img th:src="@{/images/Gacho-icon-White.png}" title="Gacho icon black"
+                                                       width="100px" height="100px"/></a>
+            <nav class="desktop-nav-links">
+                <ul>
+                    <li><a href="art">Art</a></li>
+                    <li><a href="music">Music</a></li>
+                    <li><a href="shop">$hop</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
 </div>
 <div class="magazine">
-    <iframe src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=u9q1w623f2" width="100%" height="700px" seamless="seamless" scrolling="no" frameBorder="0" allowFullScreen></iframe>
+    <iframe src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=u9q1w623f2" width="100%" height="700px"
+            seamless="seamless" scrolling="no" frameBorder="0" allowFullScreen></iframe>
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
