--- a/src/main/resources/templates/art.html
+++ b/src/main/resources/templates/art.html
@@ -9,10 +9,33 @@
     <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
     <link rel="stylesheet" type='text/css' th:href="@{/navbar.css}">
     <link rel="stylesheet" type='text/css' th:href="@{/art.css}">
+    <link rel="stylesheet" type='text/css' th:href="@{/catLoader.css}">
     <link rel="stylesheet" href="/static/art.css">
 
 </head>
 <body>
+<script>
+    window.addEventListener("load", function () {
+        const loader = document.querySelector(".loader");
+        loader.className += " hidden";
+    })
+    window.addEventListener("load", function () {
+        const loader = document.querySelector(".mobileLoader");
+        loader.className += " mobileHidden";
+    })
+</script>
+</head>
+<body>
+<div class="d-block d-sm-block d-md-block d-lg-none">
+    <div class="mobileLoader">
+        <img th:src="@{/images/LoadingCat.gif}" alt="loading-cat" height="50%" width="225%">
+    </div>
+</div>
+<div class="d-none d-lg-block d-xl-block">
+    <div class="loader">
+        <img th:src="@{/images/LoadingCat.gif}" alt="loading-cat">
+    </div>
+</div>
 <!--mobile navbar -->
 <div class="d-block d-sm-block d-md-block d-lg-none">
     <header>
