--- a/src/main/resources/templates/magazine.html
+++ b/src/main/resources/templates/magazine.html
@@ -69,6 +69,7 @@
         </nav>
     </header>
 </div>
+<h1>hello</h1>
 <!--desktop navbar-->
 <div class="d-none d-lg-block d-xl-block">
     <div class="navigation-bar navbar-dark bg-dark">
