--- a/src/main/resources/templates/magazine.html
+++ b/src/main/resources/templates/magazine.html
@@ -68,6 +68,7 @@
             </div>
         </nav>
     </header>
+    <h1>Hello</h1>
 </div>
 <!--desktop navbar-->
 <div class="d-none d-lg-block d-xl-block">
